--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #1e1e1e;
   color: #fff;
 }
@@ -21,7 +21,7 @@ body {
 
 /* Pantalla de la calculadora */
 #display {
-  width: 90%;
+  width: 100%;
   height: 60px;
   background-color: #444;
   border-radius: 10px;
@@ -33,13 +33,15 @@ body {
   font-size: 2rem;
   color: #00e676;
   box-shadow: inset 0 -4px 8px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  text-overflow: ellipsis; /* Agregado para manejar el desbordamiento del texto */
 }
 
 /* Contenedor de los botones */
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 15px;
+  gap: 15px;
 }
 
 /* Estilo de los botones */
@@ -52,6 +54,7 @@ button {
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box; /* Asegura que el padding no afecte el tamaño total del botón */
 }
 
 /* Estilo de los botones numéricos */
@@ -94,4 +97,15 @@ button.clear {
 
 button.clear:hover {
   background-color: #f44336;
+}
+
+/* Estilo del botón de retroceso */
+button.backspace {
+  background-color: #f57f17;
+  color: #fff;
+}
+
+/* Botón de cero específico */
+button.zero {
+  grid-column: span 2; /* Ocupa dos columnas para el botón cero */
 }
